--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,7 @@ spring.datasource.password=anything
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# Swagger UI configuration
+springdoc.swagger-ui.url=https://sb-rest-h2-db-app-production.up.railway.app/v3/api-docs
+
 server.port=8080
