swagger related changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.h2.console.path=/h2-console
 
 # Swagger UI configuration
 # springdoc.swagger-ui.url=https://sb-rest-h2-db-app-production.up.railway.app/v3/api-docs
-server.servlet.context-path=/my-context-path
-server.forward-headers-strategy=framework
+#server.servlet.context-path=/my-context-path
+#server.forward-headers-strategy=framework
 
 server.port=8080
